--- a/uno.html
+++ b/uno.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="vaper tales de tales">
-    <meta property="og:image" content="https://acdn.mitiendanube.com/stores/002/084/139/products/dscf15271-ba4b7b11b25bfe8b4716491055366085-1024-1024.jpg">
+    <meta property="og:image" content="https://discouy.vtexassets.com/arquivos/ids/1764418/Whisky-americano-JACK-DANIELS-1L-1.jpg?v=638507811208870000">
     <title>jack</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css">
