--- a/uno.html
+++ b/uno.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="vaper tales de tales">
+    <meta property="og:title" content="vaper tales de talesss">
     <meta property="og:image" content="https://assets.turbologo.com/blog/es/2020/02/19132650/Jack-Daniels-Bottle.png">
     <title>jack</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
@@ -28,7 +28,7 @@
               </div>
               <div class="product-content" >
                   <div class="product-text">
-                      <span>$70k</span>
+                      <span>$75k</span>
                       <h3>jackcaerjf</h3>
                       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi, odit harum. I
                           ll
